--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <ul class="nav-collapse">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="team.html">Team</a></li>
-                    <li><a href="pricelist.html">Pricelist</a></li>
+                    <li><a href="pricelist.html">Price List</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="testimonials.html">Testimonials</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
@@ -238,7 +238,9 @@
         var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 15,
           center: myLatLng,
+          scrollwheel:  false,
           mapTypeControlOptions: {
+            scrollwheel: false,
             mapTypeIds: [google.maps.MapTypeId.ROADMAP, customMapTypeId]
           }
         });
@@ -253,18 +255,18 @@
         map.setMapTypeId(customMapTypeId);
       }
         </script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCS1L-Jbqn3ll_S68tAIkgSo66TZM6nF0&callback=initMap"
+        <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
         async defer></script>
     </div>
 </div>
 
 <hr>
 
-<div class="row gallery_home">
-    <div class="small-6 medium-3 large-3 columns"><a href="gallery"><img src="img/gallery_1.jpg"></a></div>
-    <div class="small-6 medium-3 large-3 columns"><a href="gallery"><img src="img/gallery_2.jpg"></a></div>
-    <div class="small-6 medium-3 large-3 columns"><a href="gallery"><img src="img/gallery_3.jpg"></a></div>
-    <div class="small-6 medium-3 large-3 columns"><a href="gallery"><img src="img/gallery_4.jpg"></a></div>
+<div class="row gallery_home hide-for-small-only">
+    <div class="small-12 medium-3 large-3 columns"><a href="gallery"><img src="img/gallery_1.jpg"></a></div>
+    <div class="small-12 medium-3 large-3 columns"><a href="gallery"><img src="img/gallery_2.jpg"></a></div>
+    <div class="small-12 medium-3 large-3 columns"><a href="gallery"><img src="img/gallery_3.jpg"></a></div>
+    <div class="small-12 medium-3 large-3 columns"><a href="gallery"><img src="img/gallery_4.jpg"></a></div>
 </div>
 
   
@@ -273,12 +275,12 @@
     <div class="footer">
 
     <div class="row">
-        <div class="small-4 large-4 columns footer_col">
+        <div class="small-12 large-4 columns footer_col">
             <h4>ADDRESS</h4>
             <p>80 High St,<br>City Centre,<br>Bristol<br>BS48 1AS</p>
         </div>
 
-        <div class="small-2 large-4 columns footer_col">
+        <div class="small-12 large-4 columns footer_col">
 
             <h4>OPENING TIMES</h4>
 
@@ -315,7 +317,7 @@
             
         </div>
 
-        <div class="small-4 large-4 columns footer_col footer_contact"><h4>Contact</h4>
+        <div class="small-12 large-4 columns footer_col footer_contact"><h4>Contact</h4>
             <a href="tel:18475555555"><p>01275 852407</p></a>
             <a href="mailto:sphairco@btinternet.com?Subject=Hello" class="button expand">Email us here</a>
         </div>
