--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/responsive-nav.css">
     <link rel="stylesheet" href="css/webicons.css" />
-    <link href="css/ninja-slider.css" rel="stylesheet" type="text/css" />
+<!--     <link href="css/ninja-slider.css" rel="stylesheet" type="text/css" /> -->
+
+    <link rel="stylesheet" href="css/smoothslides.theme.css">
     <link rel="stylesheet" type="text/css" href="css/gallery.css" />
     <link rel="stylesheet" href="css/app.css" />
     <script src="js/vendor/jquery.min.js"></script>
     <script src="js/responsive-nav.js"></script>
-    <script src="js/ninja-slider.js" type="text/javascript"></script>
+    <!-- <script src="js/ninja-slider.js" type="text/javascript"></script> -->
     
     <!-- LOADER -->
     <script type="text/javascript">
@@ -63,7 +65,14 @@
 
     <div id="content">
 
-<div id="ninja-slider">
+    <div class="smoothslides" id="myslideshow1">    
+        <img src="img/1.jpg"/>   
+        <img src="img/2.jpg"/>   
+        <img src="img/3.jpg"/>   
+        <img src="img/4.jpg"/>
+    </div>
+
+<!-- <div id="ninja-slider">
     <div class="slider-inner">
         <ul>
             <li>
@@ -92,7 +101,9 @@
             <div id="ninja-slider-next"></div>
         </div>
     </div>
-</div>
+</div> -->
+
+<hr>
 
 <div class="row about_and_maps">
     <div class="small-12 medium-6 large-6 columns">
@@ -339,5 +350,36 @@
     <script src="js/foundation.min.js"></script>
     <script src="js/app.js"></script>
     
+        <!-- for homebanner -->
+    <script type="text/javascript" src="js/vendor/jquery.js"></script>
+    <script type="text/javascript" src="js/smoothslides-2.1.0.min.js"></script>
+    <script type="text/javascript">
+        /* wait for images to load */
+        $(window).load( function() {
+
+            $('#myslideshow1').smoothSlides({
+            effectDuration: 3500
+            /* options seperated by commas */
+            });
+
+            $('xmp').click(function(){
+                var saveContent = $(this).html();
+                $("body").append("<input type='text' id='temp' style=''>");
+                $("#temp").val(saveContent).select();
+                document.execCommand("copy");
+                $("#temp").remove();
+                $("body").append('<div class="message">Copied To Clipboard</div>');
+                $(".message").slideDown();
+                setTimeout(function(){
+                    $(".message").slideUp(function(){
+                        $(this).remove();
+                    });
+                }, 1000)
+            });
+
+        });
+    </script>
+    <!-- /for homebanner -->
+
 </body>
 </html>
