team images added, copy updated

--- a/products.html
+++ b/products.html
@@ -99,7 +99,7 @@
 	<div class="row">
 		<div class="small-4 large-4 columns footer_col">
 			<h4>ADDRESS</h4>
-			<p>80 High St,<br>City Centre,<br>Bristol<br>BS48 1AS</p>
+			<p>80 High St,<br>Nailsea,<br>Bristol<br>BS48 1AS</p>
 		</div>
 
 		<div class="small-2 large-4 columns footer_col">
