--- a/testimonials.html
+++ b/testimonials.html
@@ -69,22 +69,21 @@
 
 		<div class="row testimonial_copy">
 			<div class="large-12 columns">
-				<hr>
-				<h3>"Testimonial One Example..."</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse placerat, ipsum vitae consequat egestas, dolor erat aliquet metus, nec euismod est neque non tellus./p>
-				<hr>
-			</div>
-			<div class="large-12 columns">
-				<hr>
-				<h3>"Testimonial Two Example..."</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse placerat, ipsum vitae consequat egestas, dolor erat aliquet metus, nec euismod est neque non tellus./p>
+				<h3>"Attentive staff and good experience...."</h3>
+				<p>Attentive staff and good experience. My hair is always cut well and the colour is amazing.</p>
+				<p>- Alison</p>
 				<hr>
 			</div>
 			<div class="large-12 columns">
+				<h3>"Thanks to all for a super hairdressing experience every time...."</h3>
+				<p>The experience is always very good in all aspects. The staff are very helpful and pleasant. When I have had my hair done family and friends always comment on how lovely it looks. I always recommend SP Hair to others. It would be good if there was a 'tips' box on reception for the staff who contribute but are not the stylists, as was the case at Christmas. Thanks to all for a super hairdressing experience every time.</p>
+				<p>- Lin</p>
 				<hr>
-				<h3>"Testimonial Three Example..."</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse placerat, ipsum vitae consequat egestas, dolor erat aliquet metus, nec euismod est neque non tellus./p>
-				<hr>
+			</div>
+			<div class="large-12 columns">
+				<h3>"I love the results..."</h3>
+				<p>My hair dresser Becky did a fantastic job as always. I trust her knowledge and advice and she delivers every time. After my cut and blow dry she curled my hair and I love the results.</p>
+				<p>- Lisa</p>
 			</div>
 		</div>
 		
@@ -97,7 +96,7 @@
 	<div class="row">
 		<div class="small-4 large-4 columns footer_col">
 			<h4>ADDRESS</h4>
-			<p>80 High St,<br>City Centre,<br>Bristol<br>BS48 1AS</p>
+			<p>80 High St,<br>Nailsea,<br>Bristol<br>BS48 1AS</p>
 		</div>
 
 		<div class="small-2 large-4 columns footer_col">
