--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 
     <div id="content">
 
-    <div class="smoothslides" id="myslideshow1">    
+    <div class="smoothslides" id="myslideshow1">
+        <img src="img/banner_logo.jpg"/>    
         <img src="img/1.jpg"/>   
         <img src="img/2.jpg"/>   
         <img src="img/3.jpg"/>   
@@ -288,7 +289,7 @@
     <div class="row">
         <div class="small-12 large-4 columns footer_col">
             <h4>ADDRESS</h4>
-            <p>80 High St,<br>City Centre,<br>Bristol<br>BS48 1AS</p>
+            <p>80 High St,<br>Nailsea,<br>Bristol<br>BS48 1AS</p>
         </div>
 
         <div class="small-12 large-4 columns footer_col">
