Amended pricelist and products pages

--- a/products.html
+++ b/products.html
@@ -69,25 +69,14 @@
 
 		<div class="products_header">
 			<h4>SP Hair are proud to stock products by</h4>
-			<a href="http://www.joico.com/" target="_blank"><img src="img/products/Joico-Logo-Tagline-Gold_PNG_HR.png"></a>
+			
 		</div>
 
-		<div class="isotope">
-		    <div class="grid-sizer"></div>
-		    <div class="gutter-sizer"></div>
-		    <figure class="item"><figcaption>I'm a product</figcaption><img src="img/products/Color-Endure-Group-Violet.jpg"></figure>
-		    <figure class="item"><img src="img/products/Body-Luxe-Group.jpg"><figcaption>I'm a product</figcaption></figure>
-		    <figure class="item"><img src="img/products/Curl-Group.jpg"><figcaption>I'm a product</figcaption></figure>
-		    <figure class="item"><img src="img/products/Daily-Care-Group.jpg"><figcaption>I'm a product</figcaption></figure>
-		    <figure class="item"><img src="img/products/JOICO-Essential-Group-3.jpg"><figcaption>I'm a product</figcaption></figure>
-		    <figure class="item"><img src="img/products/JOICO-Essentials-Group1.jpg"><figcaption>I'm a product</figcaption></figure>
-		    <figure class="item"><img src="img/products/K-Pak-Color-Therapy-group1.jpg"><figcaption>I'm a product</figcaption></figure>
-		    <figure class="item"><img src="img/products/K-Pak-Group.jpg"><figcaption>I'm a product</figcaption></figure>
-		    <figure class="item"><img src="img/products/K-Pak-Group1.jpg"><figcaption>I'm a product</figcaption></figure>
-		    <figure class="item"><img src="img/products/K-Pak-Group3.jpg"><figcaption>I'm a product</figcaption></figure>
-		    <figure class="item"><img src="img/products/Moisture-Recovery-group1.jpg"><figcaption>I'm a product</figcaption></figure>
-		    <figure class="item"><img src="img/products/Moisture-Recovery-group2.jpg"><figcaption>I'm a product</figcaption></figure>
-		    <figure class="item"><img src="img/products/Smooth-Cure-group.jpg"><figcaption>I'm a product</figcaption></figure>
+		<div class="row product_logos">
+			<div class="large-12"><a href="https://lanza.com/" target="_blank"><img src="img/products/lanza_logo.png"></a></div>
+			<div class="large-12"><a href="http://www.biosthetique.co.uk/" target="_blank"><img src="img/products/la_bio_logo.jpg"></a></div>
+			<div class="large-12"><a href="http://www.joico.com/" target="_blank"><img src="img/products/joico_logo.png"></a></div>
+			<div class="large-12"><a href="http://www.ghdhair.com/" target="_blank"><img src="img/products/ghd_logo.jpg"></a></div>
 		</div>
 
 	</div>
