--- a/pricelist.html
+++ b/pricelist.html
@@ -67,41 +67,26 @@
 
 <div class="pricelist_main">
 	<div class="row">
-		<div class="small-12 large-6 columns">
+		<div class="small-12 large-12 columns">
 			<hr>
-			<h3>Cut &amp; Finish</h3>
-			<p>Lorem Ipsum - £20</p>
-			<p>Lorem Ipsum - £20</p>
-			<p>Lorem Ipsum - £20</p>
-			<p>Lorem Ipsum - £20</p>
+			<h3>Ladies</h3>
+			<p>Ladies Cut &amp; Finish - From £35 to £46</p>
+			<p>Full Head Colour - From £53 to £68</p>
+			<p>Full Head Highlights - From £68 to £75</p>
+			<p>Half Head Colour - From £46 to £52</p>
 			<hr>
 		</div>
-		<div class="small-12 large-6 columns">
-			<hr>
-			<h3>Cut &amp; Finish</h3>
-			<p>Lorem Ipsum - £20</p>
-			<p>Lorem Ipsum - £20</p>
-			<p>Lorem Ipsum - £20</p>
-			<p>Lorem Ipsum - £20</p>
+		<div class="small-12 large-12 columns">
+			<h3>Gents</h3>
+			<p>Gents Cut - From £15 to £21</p>
 			<hr>
 		</div>
 	</div>
 
 	<div class="row">
-		<div class="small-12 large-6 columns">
-			<h3>Cut &amp; Finish</h3>
-			<p>Lorem Ipsum - £20</p>
-			<p>Lorem Ipsum - £20</p>
-			<p>Lorem Ipsum - £20</p>
-			<p>Lorem Ipsum - £20</p>
-			<hr>
-		</div>
-		<div class="small-12 large-6 columns">
-			<h3>Cut &amp; Finish</h3>
-			<p>Lorem Ipsum - £20</p>
-			<p>Lorem Ipsum - £20</p>
-			<p>Lorem Ipsum - £20</p>
-			<p>Lorem Ipsum - £20</p>
+		<div class="small-12 large-12 columns">
+			<h3>Senior Citizens</h3>
+			<p>Cut &amp; Finish - From £32 to £44</p>
 			<hr>
 		</div>
 	</div>
