--- a/pricelist.html
+++ b/pricelist.html
@@ -49,7 +49,6 @@
 					<li><a href="pricelist.html">Pricelist</a></li>
 					<li><a href="contact.html">Contact</a></li>
 					<li><a href="testimonials.html">Testimonials</a></li>
-					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="products.html">Products</a></li>
 				</ul>
 			</nav>
@@ -71,8 +70,9 @@
 			<h3>Ladies</h3>
 			<p>Ladies Cut &amp; Finish - From £35 to £46</p>
 			<p>Full Head Colour - From £53 to £68</p>
-			<p>Full Head Highlights - From £68 to £75</p>
+			<p>Foil Highlights - From £68 to £75</p>
 			<p>Half Head Colour - From £46 to £52</p>
+			<p>Advance Colours & Balayage Colour - Price on application</p>
 			<hr>
 		</div>
 		<div class="small-12 large-12 columns">
@@ -85,6 +85,7 @@
 	<div class="row">
 		<div class="small-12 large-12 columns">
 			<h3>Senior Citizens</h3>
+			<p>Tuesdays & Wednesdays only</p>
 			<p>Cut &amp; Finish - From £32 to £44</p>
 			<hr>
 		</div>
