--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title><?php echo $pageTitle; ?></title>
+	<title>SP Hair | Team</title>
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <script src="//code.jquery.com/jquery-1.12.0.min.js"></script> -->
 	<link rel="stylesheet" href="css/foundation.css" />
@@ -49,7 +49,6 @@
 					<li><a href="pricelist.html">Pricelist</a></li>
 					<li><a href="contact.html">Contact</a></li>
 					<li><a href="testimonials.html">Testimonials</a></li>
-					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="products.html">Products</a></li>
 				</ul>
 			</nav>
@@ -337,7 +336,7 @@
 	<div class="row">
 	<div class="small-12 medium-12 large-12 columns">
 	<div class="small-12 medium-3 large-3 columns team_pic">
-		<img src="img/profile/example.jpg">
+		<img src="img/profile/lisa.jpg">
 	</div>
 	<div class="small-12 medium-9 large-9 columns">
 		<h2>Lisa Gregory</h2>
@@ -350,28 +349,8 @@
 	</div>
 	</div>
 	</div>
-
+	
 	<hr>
-
-	<div class="row">
-	<div class="small-12 medium-12 large-12 columns">
-	<div class="columns team_pic show-for-small-only">
-		<img src="img/profile/example.jpg">
-	</div>
-	<div class="small-12 medium-9 large-9 columns">
-		<h2>Sue</h2>
-		<h3>Profile to Follow</h3>
-		<p>Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. </p>
-		<p>Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. </p>
-		<p>Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. Profile to Follow. </p>
-
-		<p>Sue says: “Profile to Follow.”</p>
-	</div>
-	<div class="hide-for-small-only medium-3 large-3 columns team_pic">
-		<img src="img/profile/example.jpg">
-	</div>
-	</div>
-	</div>
 </div>
 
 </div>
